--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ section::after{
   padding: 25px;
   border-radius: 25px;
   backdrop-filter: blur(30px);
+  -webkit-backdrop-filter: blur(30px);
   background-color: rgba(255, 255, 255, 0.1);
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
   border: 1px solid rgba(255, 255, 255, 0.1);
